# tylor

./: .aws-setup.sh  .gitignore  .mcp.json  .npmignore  AGENTS.md  CLAUDE.md  CLAUDE_PLATFORM_AWS_SETUP.md  LICENSE  README.md  install.py  install.sh  package.json  pyproject.toml  registry.json
.claude-plugin/: plugin.json
hooks/: kill-thread-trigger.sh  post-tool-use-code-index.sh  session-checkpoint.sh  session-start.sh
scripts/: dev-sync.js
server/: .env.example  config.py  main.py  requirements.txt  ui_server.py  validate.py
server/personas/: analyst.md  ceo.md  code_agent.md  cto.md
server/storage/: dynamo.py  json_store.py  opensearch.py  s3.py
server/tests/: test_install.py  test_isolation.py  test_ui_server.py  test_ui_shader_background.py  test_ui_story_6_3.py
server/tools/: agents.py  executor.py  harness.py  help.py  hooks.py  personas.py  registry.py  router.py  security.py  skill_installer.py  summarizer.py  tylor.py  ui.py
skills/add-skill/: SKILL.md
skills/afk-status/: SKILL.md
skills/bmad/: SKILL.md
skills/ecc-data/: SKILL.md
skills/ecc-diagrams/: SKILL.md
skills/ecc-pipeline/: SKILL.md
skills/ecc-presentation/: SKILL.md
skills/ecc-web/: SKILL.md
skills/help-agent101/: SKILL.md
skills/kill-thread/: SKILL.md
skills/list-threads/: SKILL.md
skills/new-thread/: SKILL.md
skills/open-threads-ui/: SKILL.md
skills/recall/: SKILL.md
skills/run/: SKILL.md
skills/set-sandbox/: SKILL.md
skills/switch-thread/: SKILL.md
skills/tylor-run/: SKILL.md
src/agent101/: __init__.py  cli.py
ui/: index.html  tylor-logo.html
(+67 files in other folders)
