[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent101"
version = "0.1.0"
description = "Tylor - Thread Management Plugin for Claude Code"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",
    "opensearch-py>=2.4.0,<3.0.0",
    "rapidfuzz>=3.6.0,<4.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "anthropic>=0.25.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/GunjanGrunge/tylor"
Repository = "https://github.com/GunjanGrunge/tylor"
Issues = "https://github.com/GunjanGrunge/tylor/issues"

[project.scripts]
agent101 = "agent101.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent101 = ["templates/*", "static/*"]